--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,10 @@ BASE_URL='/'
 VITE_API_URL='http://localhost/api'
 
 VITE_MINUTES_WAINTING=2
+VITE_FIREBASE_API_KEY='AIzaSyB9WmiFuqQkmKD0jjdIA3aD_aF-tKEzk6Q'
+VITE_FIREBASE_AUTH_DOMAIN='kiemlua-eba99.firebaseapp.com'
+VITE_FIREBASE_PROJECT_ID='kiemlua-eba99'
+VITE_FIREBASE_APP_ID='1:167382276190:web:bedad4c76c0116369d7ccf'
+VITE_FIREBASE_MEASUREMENT_ID='G-SLYJ983W43'
+VITE_FIREBASE_STORAGE_BUCKET='kiemlua-eba99.appspot.com'
+
