--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "axios": "^1.4.0",
     "axios-mock-adapter": "^1.21.4",
     "chart.js": "^4.1.2",
+    "firebase": "^10.7.1",
     "jwt-decode": "^3.1.2",
+    "libphonenumber-js": "^1.10.53",
     "moment": "^2.30.0",
     "pinia": "^2.1.3",
     "prismjs": "^1.29.0",
@@ -33,6 +35,7 @@
     "vue-chartjs": "^5.2.0",
     "vue-flatpickr-component": "11.0.3",
     "vue-i18n": "^9.2.2",
+    "vue-phone-number-input": "^1.12.13",
     "vue-prism-component": "^2.0.0",
     "vue-router": "^4.2.1",
     "vue-sweetalert2": "^5.0.5",
