--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "axios": "^1.4.0",
     "axios-mock-adapter": "^1.21.4",
     "chart.js": "^4.1.2",
+    "chrome-historian": "^1.8.0",
     "firebase": "^10.7.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.30.0",
+    "node-browser-history": "^3.0.0",
     "pinia": "^2.1.3",
     "prismjs": "^1.29.0",
     "roboto-fontface": "^0.10.0",
@@ -33,6 +35,7 @@
     "vue": "^3.3.4",
     "vue-chartjs": "^5.2.0",
     "vue-flatpickr-component": "11.0.3",
+    "vue-gtag": "^2.0.1",
     "vue-i18n": "^9.2.2",
     "vue-prism-component": "^2.0.0",
     "vue-router": "^4.2.1",
